# PosterPilot

./: .gitignore  Dockerfile  README.md  build.bat  docker-compose.yml  posterpilot.spec  pyproject.toml  requirements.txt  run.py  start.bat
.github/workflows/: release.yml
app/: __init__.py  config.py  main.py  models.py
app/routes/: api.py  pages.py
app/services/: config_store.py  ignore_list.py  library_scanner.py  plex_client.py  poster_applier.py  poster_extractor.py  poster_scorer.py  task_manager.py  thumbnail_cache.py  tmdb_client.py
app/static/css/: style.css
app/static/js/: app.js
app/static/spa/: index.html
app/static/spa/assets/: index-9fcSfU3q.js  index-B7qJKT_5.css  index-BF6psvQ6.css  index-B_OjYE0C.css  index-BbmGe0CJ.js  index-BqA_N93i.css  index-C1VEg3Fl.css  index-CEIYEFsj.css  index-CEoqGQOI.js  index-CLHPev7J.css  index-CU1o-bLM.css  index-CWgRwahB.js  index-CZvUd9KY.css  index-Ccz4VIOt.css  index-CgBkkRlc.js  index-Cigimg4-.css  index-CoQk2ra7.js  index-D1sIROG-.js  index-D84YupWO.css  index-DGvcPkEk.js  index-DIdEzxAh.js  index-DJfMepGv.js  index-DWYYXvVn.js  (+13 more)
app/templates/: base.html  index.html  logs.html  scan.html  settings.html
data/: config.toml.example
frontend/: index.html  vite.config.js
frontend/src/: App.vue  api.js  router.js
frontend/src/assets/: style.css
frontend/src/components/: AppSidebar.vue  ToastContainer.vue
frontend/src/composables/: useConnection.js  useScanProgress.js  useTheme.js  useToast.js
frontend/src/views/: DashboardView.vue  LogsView.vue  ScanResultsView.vue  SettingsView.vue
